--- a/build.gradle
+++ b/build.gradle
@@ -17,17 +17,17 @@ compileTestKotlin {
 
 repositories {
     mavenCentral()
+    maven {
+        url = "https://repo.trinarywolf.net/releases"
+    }
 }
 
 dependencies {
     String ktor_version = "2.3.10"
-    api ("io.ktor:ktor-client-core:$ktor_version")
-    api ("io.ktor:ktor-client-cio:$ktor_version")
-    api ("io.ktor:ktor-client-websockets:$ktor_version")
-    api ("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
-    api ("com.googlecode.json-simple:json-simple:1.1.1")
-    api ("io.arrow-kt:arrow-core:${rootProject.properties["arrow_version"]}")
-    api ("io.insert-koin:koin-core:3.4.0")
+    api("skywolf46:devain-version-full:1.3.1")
+    api("io.ktor:ktor-client-core:$ktor_version")
+    api("io.ktor:ktor-client-cio:$ktor_version")
+    api("io.ktor:ktor-client-websockets:$ktor_version")
 }
 
 
